fix: bug where gradient would end prematurely when viewing on mobile
This commit fixes a mobile bug that would cause the gradient to cut off near the bottom of the page, rather than continuing smoothly all the way down.

--- a/portfolio-client/src/app/(pages)/(index)/page.module.css
+++ b/portfolio-client/src/app/(pages)/(index)/page.module.css
@@ -1,13 +1,12 @@
 .page {
   /*position: relative;*/
-  /*overflow: scroll;*/
+  overflow: scroll;
   /*!*display: grid;*!*/
   /*!*grid-template-rows: 20px 1fr 20px;*!*/
   /*!*justify-items: center;*!*/
   /*min-height: 100svh;*/
   /*padding: 80px;*/
   /*!*gap: 64px;*!*/
-
 }
 
 .background {
